--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -10,6 +10,9 @@
     position: absolute;
     bottom: 0;
     align-items: center;
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
   }
 }
 
@@ -20,4 +23,3 @@
   justify-content: center;
   align-items: center;
 }
-
